crates/errmeta_derive/tests/fails/missing_error_type.rs
#[derive(Debug, errmeta_derive::ErrorMeta)]
pub enum TestError {
  #[error_meta(code = "bad_request", status = 200)]
  BadRequest,
}

fn main() {}
