crates/errmeta_derive/tests/fails/missing_error_type.stderr
error: error_type not specified for variant 'BadRequest'
 --> tests/fails/missing_error_type.rs:1:17
  |
1 | #[derive(Debug, errmeta_derive::ErrorMeta)]
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `errmeta_derive::ErrorMeta` (in Nightly builds, run with -Z macro-backtrace for more info)
